--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,7 @@
 html body {
 	margin: 0; 
 	padding:0;
+	overflow:hidden;
 }
 div.videolist {
 	position:fixed; 
@@ -54,4 +55,59 @@ div.hidevideos {
 	border-right:20px solid transparent;
 	border-bottom: 20px solid gray;
 	cursor: pointer;
+}
+div.mainTitle {
+	position:absolute;
+	top:0px;
+	left:0px;
+	background-color:black;
+	z-index:1900;
+	width:100%;
+	height:100%;
+	overflow:hidden;
+}
+div.title {
+	position:absolute;
+	margin:0;
+	padding:0;
+	top:37.5%;
+	left:5%;
+	color:white;
+	font-family:helvetica,sans-serif;
+	font-size:65px;
+	font-weight:bolder;
+	white-space:nowrap;
+	overflow:hidden;
+}
+div.whiteline {
+	position:absolute;
+	margin:0;
+	margin-top:68px;
+	padding:0;
+	background-color:white;
+	vertical-align:bottom;
+	top:37.5%;
+	left:5%;
+	width:95%;
+	height:7px;
+}
+div.menubutton {
+	position:absolute;
+	margin:0;
+	padding:0;
+	top:50%;
+	right:0;
+	height:50px;
+	width:23px;
+	margin-top:-25px;
+	margin-right:-3px;
+	z-index:1800;
+	background-color:lightgray;
+	color:darkgray;
+	font-family:helvetica,sans-serif;
+	font-size:30px;
+	overflow:hidden;
+	line-height:50px;
+	border-radius:3px;
+	cursor:pointer;
 }
