--- a/css/app.css
+++ b/css/app.css
@@ -49,6 +49,7 @@ div.showvideos {
 	position:fixed;
 	top:0px;
 	left:50%;
+	margin-left:-20px;
 	z-index:1900;
 	width: 0; 
 	height: 0; 
@@ -61,6 +62,7 @@ div.hidevideos {
 	position:absolute;
 	top:85px;
 	left:50%;
+	margin-left:-20px;
 	z-index:2100;
 	width:0px;
 	height:0px;
@@ -157,4 +159,17 @@ div.mainmenu div {
 }
 div.mainmenu .selected {
 	border:1px solid white;
+}
+div.loading {
+	position:absolute;
+	margin:0;
+	padding:0;
+	margin-top:10px;
+	top:0;
+	left:0;
+	width:100%;
+	text-align:center;
+}
+div.loading img {
+	height:70px;
 }
